--- a/assets/style.css
+++ b/assets/style.css
@@ -19,8 +19,7 @@ display: block;
 .header h1 {
     display: inline-block;
     font-size: 48px;
-    font-weight: bold;
-}
+    font-weight: bold;}
 
 /*side bar nav*/
 .nav {
@@ -28,8 +27,7 @@ display: block;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
+    font-size: 20px;}
 .nav  ul {
     list-style-type: none;
 }
@@ -62,7 +60,7 @@ flex-direction: row;
 #aboutme {
 flex-basis: 30%;
 text-indent: 20%;
-color: #314618;
+color: #427406;
 }
 #abouttext 
 {flex-basis: 60%;}
@@ -74,6 +72,11 @@ color: #314618;
 }
 #worktext 
     {flex-basis: 60%;
+}
+
+img {
+    width: 250px;
+    height: 250px;
 }
 
 #photos {
