--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,6 @@ display :flex;
 width: 100%;
 margin-top: 10px;
 flex-direction: row;
-
 }
 
 #aboutme {
@@ -68,29 +67,29 @@ color: #427406;
 #mywork {
     flex-basis: 30%;
     text-indent: 20%;
+   
 
 }
 #worktext 
     {flex-basis: 60%;
+        position: relative;
 }
 
 img {
     width: 250px;
-    height: 250px;
-}
+    height: 250px;}
 
-#photos {
-flex-wrap: wrap;
-display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+
+#flex1 {flex: 2;}
 
 #contact {
     flex-basis: 30%;
-    text-indent: 20%;
-
-}
+    text-indent: 20%;}
 #contacttext
-    {flex-basis: 60%;
+    {flex-basis: 60%;}
+
+.topleft{
+    position: absolute;
+    top: 8px;
+    left: 10px;
 }
