--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 /*body code*/
 body {
-    background-color: #c9c9c9;
+    background-color: #adb4aa;
 display: block;
 }
 /*header code*/
@@ -14,12 +14,14 @@ display: block;
     padding: 20px 0px 0px 0px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #d2e6bb;
-    color: 	#314618;}
+    color: 	#314618;
+}
 
 .header h1 {
     display: inline-block;
     font-size: 48px;
-    font-weight: bold;}
+    font-weight: bold;
+}
 
 /*side bar nav*/
 .nav {
@@ -27,7 +29,8 @@ display: block;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;}
+    font-size: 20px;
+}
 .nav  ul {
     list-style-type: none;
 }
@@ -47,7 +50,6 @@ display: block;
     background-size: cover;
     background-position: center;
 }
-
 /*container*/
 .container {
 display :flex;
@@ -55,20 +57,23 @@ width: 100%;
 margin-top: 10px;
 flex-direction: row;
 }
-
+/*about me*/
 #aboutme {
 flex-basis: 30%;
 text-indent: 20%;
-color: #427406;
+    color: 	#314618;
+    font-weight: bold;
 }
+
 #abouttext 
 {flex-basis: 60%;}
 
+/*my work*/
 #mywork {
     flex-basis: 30%;
     text-indent: 20%;
-   
-
+    color: 	#314618;
+    font-weight: bold;
 }
 #worktext 
     {flex-basis: 60%;
@@ -79,17 +84,47 @@ img {
     width: 250px;
     height: 250px;}
 
+#flex1{
+    flex-grow: 2;
+    width: 400px;
+    height: 400px;
+}
 
-#flex1 {flex: 2;}
-
+/*contact me*/
 #contact {
     flex-basis: 30%;
-    text-indent: 20%;}
+    text-indent: 20%;
+    color: 	#314618;
+font-weight: bold;}
 #contacttext
     {flex-basis: 60%;}
 
-.topleft{
-    position: absolute;
-    top: 8px;
-    left: 10px;
+
+.footer {
+    padding: 20px 0px 0px 0px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #d2e6bb;
+    color: 	#314618;
+    text-align: center;}
+
+    /* Cards are split into two columns at 992px or smaller */
+@media screen and (max-width: 992px) {
+.nav ul li {
+      flex-direction: column;}
+#aboutme {
+        flex-basis: 100%;}
+#contact {flex-basis: 100%;}
+#mywork {flex-basis: 100%;}
 }
+
+  
+  /* Cards are stacked on top of each other at 768px or smaller */
+  @media screen and (max-width: 768px) {
+.nav ul li{
+        flex-direction: column;
+    }
+    #aboutme {
+        flex-basis: 100%;}
+#mywork {flex-basis: 100%;}
+#contact {flex-basis: 100%;}
+  }
